--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,70 @@ main{
 
 .controls{
   display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  padding: 30px 30px;
   width: 25%;
   height: 550px;
   background-color: RGB(240,240,240);
   border-radius: 25px 0 0 25px;
 }
 
+.button{
+  display: flex;
+  width: 35%;
+  aspect-ratio: 1 / 1;
+  background-color: white;
+  border-radius: 100%;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
+.button:nth-child(even) {
+  align-self: flex-end;
+}
+
+.selector{
+  display: flex;
+  position: relative;
+  background-color: gray;
+  border-radius: 25px;
+  width: 100%;
+  height: 5px;
+  margin-top: 40px;
+}
+
+.marker{
+  position: absolute;
+  background-color: black;
+  transform: translate(-50%, -50%);
+  left: 10%;
+  top: 50%;
+  height: 25px;
+  width: 4px;
+  border-radius: 25px;
+}
+
+.labels {
+  display: flex;
+  padding: 0 4%;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.group-1{
+  display: flex;
+  flex-direction: column;
+}
+
+.group-2 {
+  display: flex;
+  justify-content: space-between;
+}
+
 .screen{
   display: flex;
+  flex-wrap: wrap;
   width: 75%;
   height: 550px;
   border-radius: 0 25px 25px 0;
@@ -36,11 +92,12 @@ main{
 
 .block{
   display: flex;
-  width: calc(100% / 16);
-  height: 100%;
-  border-right: 2px solid white;
-  border-bottom: 2px solid white;
+  border: 1px solid white;
   box-sizing: border-box;
+}
+
+.block:hover{
+  background-color: aquamarine;
 }
 
 .row{
