--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ main{
   flex-direction: column;
   justify-content: space-evenly;
   box-sizing: border-box;
-  padding: 30px 30px;
+  padding: 75px 30px;
   width: 25%;
   height: 550px;
   background-color: RGB(240,240,240);
@@ -44,14 +44,22 @@ main{
   align-self: flex-end;
 }
 
+.button:hover{
+  cursor: pointer;
+}
+
+.button:active{
+  cursor: grabbing;
+}
+
 .selector{
   display: flex;
   position: relative;
-  background-color: gray;
+  background: linear-gradient(to left, #333, #333 50%, #eee 100%);
   border-radius: 25px;
   width: 100%;
   height: 5px;
-  margin-top: 40px;
+  margin-top: 75px;
 }
 
 .marker{
@@ -60,16 +68,24 @@ main{
   transform: translate(-50%, -50%);
   left: 10%;
   top: 50%;
-  height: 25px;
-  width: 4px;
+  height: 35px;
+  width: 5px;
   border-radius: 25px;
+}
+
+.marker:hover{
+  cursor: pointer;
+}
+
+[draggable=true] {
+  cursor: move;
 }
 
 .labels {
   display: flex;
-  padding: 0 4%;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
+  user-select: none;
 }
 
 .group-1{
@@ -92,8 +108,9 @@ main{
 
 .block{
   display: flex;
-  border: 1px solid white;
+  border: .5px solid white;
   box-sizing: border-box;
+  aspect-ratio: 1 / 1;
 }
 
 .block:hover{
@@ -104,4 +121,12 @@ main{
   display: flex;
   width: 100%;
   height: calc(100% / 16);
+}
+
+#sixteen{
+  padding-left: 5%;
+}
+
+#sixtyFour {
+  padding-right: 5%;
 }
