--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ main{
   background-color: rgba(0,0,0,0.6);
   width: 850px;
   height: 550px;
-  border-radius: 25px 0 0 25px;
+  border-radius: 25px 25px 25px 25px;
 }
 
 .controls{
@@ -24,11 +24,17 @@ main{
   flex-direction: column;
   justify-content: space-evenly;
   box-sizing: border-box;
-  padding: 75px 30px;
+  padding: 40px 30px;
   width: 25%;
   height: 550px;
   background-color: RGB(240,240,240);
   border-radius: 25px 0 0 25px;
+}
+.bookend{
+  background-color: RGB(240, 240, 240);
+  display: flex;
+  flex-grow: 1;
+  border-radius: 0 25px 25px 0;
 }
 
 .button{
@@ -59,7 +65,7 @@ main{
   border-radius: 25px;
   width: 100%;
   height: 5px;
-  margin-top: 75px;
+  margin-top: 95px;
 }
 
 .marker{
@@ -69,8 +75,9 @@ main{
   left: 10%;
   top: 50%;
   height: 35px;
-  width: 5px;
+  width: 8px;
   border-radius: 25px;
+  transition: transform 1s;
 }
 
 .marker:hover{
@@ -101,14 +108,15 @@ main{
 .screen{
   display: flex;
   flex-wrap: wrap;
-  width: 75%;
+  width: 550px;
   height: 550px;
   border-radius: 0 25px 25px 0;
+  background-color: rgba(0, 0, 0, 0.02);
 }
 
 .block{
   display: flex;
-  border: .5px solid white;
+  border: .15px solid RGBA(240,240,240,0.2);
   box-sizing: border-box;
   aspect-ratio: 1 / 1;
 }
@@ -123,10 +131,32 @@ main{
   height: calc(100% / 16);
 }
 
-#sixteen{
-  padding-left: 5%;
+#button1{
+  background-color: #000 ;
+}
+#button2 {
+  background-color: #4B5457 ;
+}
+#button3 {
+  background-color: #FF4749;
+}
+#button4 {
+  background-color: #52A5FF ;
+}
+#button5 {
+  background-color: #F7C200;
+}
+#button6 {
+  background-color: #1EB85E ;
+}
+#button7 {
+  background-color: white;
 }
 
-#sixtyFour {
-  padding-right: 5%;
+#button8 {
+  background-color: white;
+  background-image: url('images/eraser-solid.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 30px;
 }
