--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 main{
   display: flex;
+  background-color: RGBA(240,240,240,0.2);
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   flex-direction: column;
@@ -27,11 +28,9 @@ main{
   padding: 40px 30px;
   width: 25%;
   height: 550px;
-  background-color: RGB(240,240,240);
   border-radius: 25px 0 0 25px;
 }
 .bookend{
-  background-color: RGB(240, 240, 240);
   display: flex;
   flex-grow: 1;
   border-radius: 0 25px 25px 0;
@@ -93,6 +92,7 @@ main{
   width: 100%;
   justify-content: space-around;
   user-select: none;
+  color: white;
 }
 
 .group-1{
