--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 main{
   display: flex;
+  position: relative;
   background-color: RGBA(240,240,240,0.2);
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -34,6 +35,8 @@ main{
   display: flex;
   flex-grow: 1;
   border-radius: 0 25px 25px 0;
+  justify-content: center;
+  padding: 20px;
 }
 
 .button{
@@ -100,10 +103,13 @@ main{
   display: flex;
   justify-content: space-between;
 }
+.group-3 {
+  display: flex;
+  justify-content: center;
+}
 
 .screen{
   display: flex;
-  position: relative;
   flex-wrap: wrap;
   width: 550px;
   height: 550px;
@@ -158,6 +164,15 @@ main{
 #button8 {
   background-color: white;
   background-image: url('images/eraser-solid.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 30px;
+}
+
+#reset{
+  width: 50px;
+  height: 50px;
+  background-image: url('images/undo-solid.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 30px;
