--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,17 @@ main{
   background-color: #000 ;
 }
 #button2 {
-  background-color: #4B5457 ;
+  background-color: #f94144;
+  background-image: linear-gradient(to right,
+      #f3722c,
+      #f8961e,
+      #f9844a,
+      #f9c74f,
+      #90be6d,
+      #43aa8b,
+      #4d908e,
+      #577590,
+      #277da1);
 }
 #button3 {
   background-color: #FF4749;
