--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 main{
   display: flex;
   position: relative;
@@ -21,6 +22,18 @@ main{
   border-radius: 25px 25px 25px 25px;
 }
 
+.active{
+  display: flex;
+  background-color: lightslategray;
+  border-radius: 100%;
+  display: none;
+  width: 20px;
+  height: 20px;
+}
+
+.default{
+  display: flex;
+}
 .controls{
   display: flex;
   flex-direction: column;
@@ -41,6 +54,8 @@ main{
 
 .button{
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 35%;
   aspect-ratio: 1 / 1;
   background-color: white;
@@ -177,6 +192,7 @@ main{
   background-position: center;
   background-repeat: no-repeat;
   background-size: 30px;
+  box-sizing: border-box;
 }
 
 #reset{
